fixed word break on event details

--- a/frontend/src/components/Events/EventDetails.css
+++ b/frontend/src/components/Events/EventDetails.css
@@ -18,7 +18,7 @@
 }
 
 #event-description-container{
-    word-break: break-all;
+    word-break: normal;
 }
 
 .gmap-container{
